--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1",
-    "moongoose": "0.0.5"
+    "mongoose": "^7.3.3"
   }
 }
